--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 comemo = "0.4.0"
+native-dialog = "0.7.0"
 tar = "0.4.41"
 time = "0.3.36"
 ttf-parser = "0.24.0"
