--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 comemo = "0.4.0"
+image = "0.25.1"
 native-dialog = "0.7.0"
+rustface = "0.1.7"
+show-image = { version = "0.14.0", features = ["image"] }
 tar = "0.4.41"
 time = "0.3.36"
 ttf-parser = "0.24.0"
