--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 comemo = "0.4.0"
 image = "0.25.1"
+img-parts = "0.3.0"
 native-dialog = "0.7.0"
 show-image = { version = "0.14.0", features = ["image"] }
 tar = "0.4.41"
