--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bitcode = "0.6.3"
 comemo = "0.4.0"
 image = "0.25.1"
 img-parts = "0.3.0"
