--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bitcode = "0.6.3"
+clap = { version = "4.5.16", features = ["derive", "wrap_help"] }
 comemo = "0.4.0"
 image = "0.25.1"
 img-parts = "0.3.0"
