--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ img-parts = "0.3.0"
 native-dialog = "0.7.0"
 show-image = { version = "0.14.0", features = ["image"] }
 tar = "0.4.41"
+tempfile = "3.12.0"
 time = "0.3.36"
 ttf-parser = "0.24.0"
 typst = "0.11.1"
