--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,8 @@ typst = "0.11.1"
 typst-pdf = "0.11.1"
 ureq = "2.10.0"
 zune-inflate = "0.2.54"
+
+[dev-dependencies]
+nextest = "0.0.0"
+pretty_assertions = "1.4.0"
+rstest = "0.22.0"
