--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ debug = true
 bitcode = "0.6.3"
 clap = { version = "4.5.16", features = ["derive", "wrap_help"] }
 comemo = "0.4.0"
+console = "0.15.8"
 image = "0.25.1"
 img-parts = "0.3.0"
 show-image = { version = "0.14.0", features = ["image"] }
